--- a/day03ts/package.json
+++ b/day03ts/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "dev": "yarn tsc; node dist/main.js",
+    "dev": "yarn tsc; node dist/main.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
