--- a/day03ts/package.json
+++ b/day03ts/package.json
@@ -6,7 +6,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "yarn tsc; node dist/main.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier --no-config --write \"./src/**/*.{mts,tsx,css,graphql}\""
   },
   "author": "",
   "license": "ISC",
