--- a/day07ts/package.json
+++ b/day07ts/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "yarn tsc; node dist/main.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "prettier": "prettier --no-config --write \"./src/**/*.{mts,tsx,css,graphql}\""
   },
   "author": "",
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "prettier": "^3.1.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vitest": "^1.0.4"
   }
 }
